--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-2">Version 2.9.2</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-1">Version 2.9.1</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-0">Version 2.9.0</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-8-9">Version 2.8.9</a></li>
@@ -208,6 +209,17 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-9-2">
+                        <h2 class="section-heading">Version 2.9.2 (January 16th 2025)</h2>
+                            <h5>- Fixed your player banner not restoring to its original one when you disabled CodeRed presets.</h5>
+                            <h5>- Fixed other players cars being green instead of their team color with the loadout anonymizer.</h5>
+                            <h5>- Fixed paint finishes not being replaced by the loadout anonymizer.</h5>
+                            <h5>- Fixed custom stadium colors not applying to cars during goal replays, and only updating after kickoffs.</h5>
+                            <h5>- Fixed custom stadium colors not instantly applying when first joining online games.</h5>
+                            <h5>- Fixed a crash that happened when entering replay files related to applying profile items.</h5>
+                            <h5>- More optimizations and internal safety improvements.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-9-1">
                         <h2 class="section-heading">Version 2.9.1 (January 12th 2025)</h2>
