--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-3">Version 2.9.3</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-2">Version 2.9.2</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-1">Version 2.9.1</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-0">Version 2.9.0</a></li>
@@ -209,6 +210,14 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-9-3">
+                        <h2 class="section-heading">Version 2.9.3 (January 22nd 2025)</h2>
+                            <h5>- Fixed a crash with the reflector window related to reading specific structs in TArrays due to incorrectly calculating class alignment for byte and bool properties, such as the "PlayerInput_TA" class.</h5>
+                            <h5>- Fixed the <code>freeplay_car_rotation</code> and <code>freeplay_ball_rotation</code> commands printing out raw unclamped rotator values, even though the command to set them only accepts -180 to 180 values.</h5>
+                            <h5>- Fixed some scenarios where yor CodeRed loadouts weren't applying on the end game podium celebration screen.</h5>
+                            <h5>- Updated the internal SDK to the latest version of Rocket League.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-9-2">
                         <h2 class="section-heading">Version 2.9.2 (January 16th 2025)</h2>
