--- a/changelog.html
+++ b/changelog.html
@@ -215,7 +215,7 @@
                         <h2 class="section-heading">Version 2.9.3 (January 22nd 2025)</h2>
                             <h5>- Fixed a crash with the reflector window related to reading specific structs in TArrays due to incorrectly calculating class alignment for byte and bool properties, such as the "PlayerInput_TA" class.</h5>
                             <h5>- Fixed the <code>freeplay_car_rotation</code> and <code>freeplay_ball_rotation</code> commands printing out raw unclamped rotator values, even though the command to set them only accepts -180 to 180 values.</h5>
-                            <h5>- Fixed some scenarios where yor CodeRed loadouts weren't applying on the end game podium celebration screen.</h5>
+                            <h5>- Fixed some scenarios where your CodeRed loadouts weren't applying on the end game podium celebration screen.</h5>
                             <h5>- Updated the internal SDK to the latest version of Rocket League.</h5>
                         </section>
 
