--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,7 @@
 		    <nav id="docs-nav" class="docs-nav navbar">
 			    <ul class="section-items list-unstyled nav flex-column pb-3">
                     <li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#section-3"><span class="theme-icon-holder me-2"><i class="fas fa-book"></i></span>Module Changelog</a></li>
+                    <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-4">Version 2.9.4</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-3">Version 2.9.3</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-2">Version 2.9.2</a></li>
                     <li class="nav-item"><a class="nav-link scrollto" href="#item-3-9-1">Version 2.9.1</a></li>
@@ -210,6 +211,14 @@
 		    <div class="container">
                 <article class="docs-article" id="section-3">
                     <h1 class="docs-heading">Changelog</h1>
+
+                        <section class="docs-section" id="item-3-9-4">
+                        <h2 class="section-heading">Version 2.9.4 (January 30th 2025)</h2>
+                            <h5>- Fixed a rare crash related to the <code>scoreboard_display_team</code> setting and opening the scoreboard at the same time a player leaves.</h5>
+                            <h5>- Fixed the <code>interface_ready_up</code> command not working unless you had the <code>interface_autoskip_replays</code> setting enabled.</h5>
+                            <h5>- Fixed the <code>interface_autoskip_replays</code> setting not working as intended.</h5>
+                            <h5>- Other minor bug fixes that no one seemed to notice.</h5>
+                        </section>
 
                         <section class="docs-section" id="item-3-9-3">
                         <h2 class="section-heading">Version 2.9.3 (January 22nd 2025)</h2>
